--- a/style.css
+++ b/style.css
@@ -51,3 +51,48 @@ body {
     margin-left: 400px;
     border-radius: 25px;
 }
+
+/*---------------------SLIDER-----------------------------*/
+
+.contenedor-slider {
+    display: flex;
+    align-items: center;
+    gap: 40px;
+    margin-top: -30px;
+    margin-bottom: 20px;
+}
+
+.slider-screen {
+    width: 100%;
+    padding: 20px 40px;
+}
+
+.slider-screen img {
+    width: 100%;
+    height: 500px;
+    object-fit: cover;
+} 
+
+#slider-arrow { 
+    width: 90%;
+    position: absolute;
+    display: flex;
+    justify-content: space-between;
+    padding: 60px; 
+}
+
+.slider-izquierdo, .slider-derecho {
+    width: 40px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+    border-radius: 50%;
+    background-color: rgba(105, 105, 105, 0.3); 
+}
+
+.slider-izquierdo img, .slider-derecho img {
+    width: 20px;
+    height: 20px;
+}
